# hackspeak-tui

./: .gitignore  Cargo.toml  README.md  justfile
src/: app.rs  main.rs
src/networking/: mod.rs  server.rs  user.rs
src/screens/: connect_screen.rs  message_screen.rs  mod.rs
src/widgets/: input.rs
